Admin routes added with test case
